lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:27: error: not found: value Maths
	return Maths.abs(b-a)
               ^